src/app/rm-calculator/rm-calculator.css
.rm-calculation-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* DATA CONTAINER, OVERALL STRUCTURE */
.data-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: .75fr repeat(4, 2.375rem) 1fr;
    grid-gap: 1rem;
    width: 22rem;
    height: 24rem;
}

input, select {
    max-width: 100%;
}

.header-container {
    grid-column: span 3; /* Spans all three columns */
    display: flex;
    align-items: center;
    justify-self: center;
}

.advanced-settings-list {
    grid-column: span 3;
}

.weight-container, 
.reps-and-intensity-container, 
.weighted-pull-up-container, 
.weighted-pull-up-header-container, 
.bodyweight-and-percentage-container {
    display: contents; /* Utilize the grid directly */
}

.weight-input, 
.reps-input-container, 
.weighted-pull-up-checkbox-container,
.bodyweight-container {
    grid-column: span 2; /* Spans two columns */
}

.weight-units-container, 
.intensity-container, 
.adv-settings-toggle, 
.percentage-container {
    grid-column: span 1; /* Occupies one column */
    display: flex;
    align-items: center; /* need to fix RPE select */
    justify-content: center;
}

.data-container input {
    color: black;
    font-size: 1rem;
    padding: 0.375rem 0.75rem;
    font-weight: 500;
    line-height: 1.5;
    border-radius: 5px;
    border: 1px solid lightgray;
}


/* HEADER ROW */
.header-container select {
    font-size: 1.625rem;
    font-weight: 700;
    border: none;
    padding: .5rem .375rem;
}


/* WEIGHT & WEIGHT UNITS ROW */
.weight-units-container .weight-unit {
    display: flex;
    align-items: center;
    color: black;
    font-size: 1rem;
    padding: 0.375rem 0.75rem;
    font-weight: 500;
    line-height: 1.5;
    border: 1px solid lightgray;
}

.left-side-weight-unit {
    border-radius: 5px;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

.right-side-weight-unit {
    border-radius: 5px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
}

.weight-unit input {
    margin-right: .125rem;
}


/* REPS & INTENSITY ROW */
.intensity-container select {
    border-radius: 5px;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
    color: black;

    font-size: 1rem;
    height: 100%;
    padding-left: 0.24rem;
    padding-right: 0.24rem;
    font-weight: 700;
    line-height: 1.5;
    border: 1px solid lightgray;
}

.intensity-container input {
    border-radius: 5px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    width: 100%;
}


/* WEIGHTED PULL UP/DIP CONTAINER */
.weighted-pull-up-checkbox-container input {
    margin-right: .25rem;
}

.weighted-pull-up-checkbox-container {
    display: flex;
    align-items: center;
    gap: 0.25rem;
}

.adv-settings-toggle {
    display: flex;
    align-items: center;
    cursor: pointer;
    gap: 0.5rem;
    color: rgb(73, 73, 73);
}

.percentage-container input {
    width: 100%;
    text-align: center;
}

.percentage-container {
    display: flex;
    align-items: center;
    gap: 0.5rem;
} 

.advanced-settings-list {
    list-style: none;
}


/* RESULT CONTAINER */
.result-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: .75rem;
}

.result-container h2 {
    padding: .5rem .375rem;
}

/* MEDIA QUERIES */
@media (min-width: 1024px) {
    .rm-calculation-container {
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
    }

    .data-container, 
    .result-container {
        height: 24rem;
        width: 22rem;
    }

    
}

@media (max-width: 768px) {
    
}

@media (max-width: 380px) {
    .data-container {
        width: 19rem;
        height: 22rem;
    }

    .header-container select {
        font-size: 1.375rem;
    }

    .weighted-pull-up-checkbox-container input {
        margin-right: .125rem;
    }

    .weighted-pull-up-checkbox-container label, 
    .adv-settings-toggle {
        font-size: .88rem;
    }

    .advanced-settings-list {
        font-size: .86rem;
    }
}

